- match variables are available inside the rule: $0, $1
- /(.)*/ returns an array in @$0

- built-in rules: alpha, alnum, ...

- faster Rule grammar

- fixed grammar bug: '$var := (xxx)' is: '$<var> := (xxx)'

- implemented ':' (untested)

- Added support for Grammar inheritance
- rule methods are internally curryed into functions

  $rule = sub { Grammar->rule_method( @_ ) }

- Simplified 'match', 'capture' keys in internal Match

0.01 
- Initial CPAN release - Pod, Tests, Packaging by audreyt & others.